# rustiminator

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: deploy.yml
migrations/: 001_create_tags_table.sql  002_create_tasks_table.sql  003_create_events_tables.sql
src/: lib.rs  main.rs
tests/: integration_tests.rs
